# ckg

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MCP.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: benchmark.sh
src/: indexer.rs  main.rs  mcp.rs  model.rs  parser.rs  retrieval.rs  scanner.rs  server.rs  storage.rs
