# Copyright (c) 2026 PHINs Group
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "ckg"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Local-first Code Knowledge Graph and MCP retrieval engine for AI coding agents"
readme = "README.md"
repository = "https://github.com/phins-group/ckg"
homepage = "https://github.com/phins-group/ckg"
keywords = ["code-search", "sqlite", "mcp", "tree-sitter", "agents"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
axum = "0.7"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
globset = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3"
